# davidgd

./: Cargo.toml  README.md
chess_logic/: Cargo.toml
chess_logic/src/: lib.rs  movement.rs
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
gui_online/: Cargo.toml
gui_online/src/: main.rs  online_dev.rs
src/: board_logic.rs  colors.rs  fen.rs  main.rs  pieces.rs
tests/: test.rs
