[package]
name = "gui_online"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_logic = { path = "../chess_logic" }
ggez = "0.5.1"
glam = "0.12.0"

tokio = { version = "1.0.0",features = ["full", "tracing"] }
tokio-util = { version = "0.6.3",features = ["full"] }
tokio-stream = { version = "0.1" }

tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
once_cell = "1.5.2"
rand = "0.8.3"
